Resolvido Issue: Text does not meet the minimal contrast requirement with its background.

--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -188,7 +188,7 @@ img {
   height: 42px;
   background-color: #1abc9c;
   border-radius: 50px;
-  color: #fff !important;
+  color: #e6d7d7 !important;
   margin-left: 30px;
   text-align: center;
 }
